--- a/audio/asp/en/0311_dancing_audio-slides.html
+++ b/audio/asp/en/0311_dancing_audio-slides.html
@@ -87,19 +87,20 @@
 </head>
 <body>
 
-<section id="zama-er-flink" class="slide level1">
-<h1>Zama er flink!</h1>
+<section id="dancing" class="slide level1">
+<h1>Dancing</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Lillebroren min sover veldig sent. Jeg våkner tidlig, fordi jeg er flink!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/02.jpg" /></p>
+<p>I dance happy, I dance I dance lonely, I dance</p>
+<p>when I am when I am sad, when I am when I am mad.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +108,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/03.jpg" /></p>
+<p>My teacher says, “Sit still! Don't dance about all day.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +118,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Du er min morgenstjerne&quot;, sier mamma.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/04.jpg" /></p>
+<p>But my mother says, “Dancing makes you healthy, Dancing makes you tall, One day you'll be a dancer, And surprise them all!”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +128,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>Jeg vasker meg selv, jeg vil ikke ha hjelp.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/05.jpg" /></p>
+<p>And I say, “One day I'll dance and people will pay Just to see me leap and twirl. ‘Her dancing is SO good,' they'll say.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0311_dancing/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +138,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>Jeg kan takle kaldt vann og blå stinkende såpe.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0311/06.jpg" /></p>
 <center>
 <strong>5</strong>
 </center>
@@ -147,82 +146,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma påminner, “Glem ikke tennene.” Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/07.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Etter kroppsvasken hilser jeg på bestefar og tante og ønsker dem en god dag.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/08.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Så kler jeg meg selv, &quot;Jeg er stor nå mamma,” sier jeg.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/09.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>Jeg kan kneppe knapper og spenne skoene mine.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/10.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>Og jeg sørger for at lillebror kjenner alle skolenyhetene.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/11.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassen gjør jeg mitt beste i alle måter.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/12.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>Jeg gjør alle disse gode tingene hver dag. Men det jeg liker mest, er å leke og leke!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/13.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="zama-er-flink-1">Zama er flink!</h2>
-<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="dancing-1">Dancing</h2>
+<strong>Text:</strong> Mary Nabire, Tessa Welch<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/dancing'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
