--- a/audio/asp/myx/0165_mulongo-ni-wanasilikhe_audio-slides.html
+++ b/audio/asp/myx/0165_mulongo-ni-wanasilikhe_audio-slides.html
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="zama-er-flink" class="slide level1">
-<h1>Zama er flink!</h1>
+<section id="mulongo-ni-wanasilikhe" class="slide level1">
+<h1>Mulongo ni wanasilikhe</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Lillebroren min sover veldig sent. Jeg våkner tidlig, fordi jeg er flink!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/02.jpg" /></p>
+<p>Khaleekho abawo umusani bari Mulongo ni mukhasi wewe Nambuya ni babaana babwe, Mukhawan ni Namono. Ne mushyaalo syaabwe mu kwamo itsala. Baaba bamenyamo boosi bataya tsaka khuhiima nikhuhenza byekhulya musisaali.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/03.jpg" /></p>
+<p>Sifukhu sitwela Mulongo numukhasi ni babaana baakhalaho khukhwingila mu sisaali mukari mbwene. Bakenda bakenda botesa angolobe nga sibanyola sindu ta. Nambuya walomela Mulongo ni khwi syendekho lundi mukari. Mulongo warangila nabo balondakho.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Du er min morgenstjerne&quot;, sier mamma.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/04.jpg" /></p>
+<p>Khanga busa Mulongo wabona lusikhu lulayi lulwene inga mulimo biilyo bikhali Mulongo walanga umukhasi we ari “lliwo lusukhu mulimo nibiilyo ni bibindi ? lmbo lwanaanu?” Bakhenda boola khulusukho ne akari waliwo baboona intsu. Bemabalola iyi ni nayi inga sibabona mundu ta. Ne tribaaba nga itsala yabaminyile nalundi yaba bwilabulye bakhalaho bikhaale balinde umwene hango.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>Jeg vasker meg selv, jeg vil ikke ha hjelp.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/05.jpg" /></p>
+<p>Khangubusa bawulira sisindu sihelerakhaiyuma wetsu.baarya naabi inga niba shebukha baabona wanesilikhe. Wanesilikhe wabareeba mwikhono lye tsisasani lnywe nanu ? mukhanasi” Mulongo waloma ari “ Khwitsile inga khuentsa byekhulya ltsala yakwa musibala syeefe.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>Jeg kan takle kaldt vann og blå stinkende såpe.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/06.jpg" /></p>
+<p>Wanasilikhe wabaha biilyo baalya bakona” kumutikhinyi wanesilikhe waloma Nambuya ari kana uteekhe Mukhawana imulye inga nakobole” Wanesilikhe naatsaya Mulongo wastya khuyima tsisols. Naakobola waloma umkhasi khutekha inyama yesolo babihile wanesilikhe. Wabulula Mukhwana wamuloma khuniina khuyembe kusiimbe naabi ebise.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma påminner, “Glem ikke tennene.” Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/07.jpg" /></p>
+<p>Wanesilikhe naakobola khangukho wareeba ari “Utekhere Mukhwana? Umukhasi waMulongo wa fukilila. Wanesilikhe warakila inyama inga enukuna. Nga wamalile lundi waloma Nambuya ari “kumukamba utekhe Namono.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Etter kroppsvasken hilser jeg på bestefar og tante og ønsker dem en god dag.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/08.jpg" /></p>
+<p>Nibwasya Mulongo numukhasi bakhola inga nibakhola syangolobe. Bateekhe inyama yesole lundi baniinisa Namono khukhwibisa mu kuyembe. Wanesilikhe wakhobola wareeba ari watekhele Namono? “ Nambuya wabeha ari Namutekhele.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Så kler jeg meg selv, &quot;Jeg er stor nå mamma,” sier jeg.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/09.jpg" /></p>
+<p>Inga Wamalikhe khulya Wanesilikhe walakila Nambuya khutekha umusetsawe buusya sino syamutisa nalundi syehe mbelesa Nambuya naabi ne Mulongo wamuloma allele tsinyama tekhele wanesilikhe. Naamala umulera. Inyama, Mulongo waniina mukheyembe.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +177,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>Jeg kan kneppe knapper og spenne skoene mine.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/10.jpg" /></p>
+<p>Lnga bwilabula wanesirikhe wakhobola. Nambuya wamuwa inyama yesi atekhele Wanesikihe wakilala kumulungo waaloma Nambuya ari “ kumukhamba itekha wamweene.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +187,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>Og jeg sørger for at lillebror kjenner alle skolenyhetene.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/11.jpg" /></p>
+<p>Sifukha isyo Wanesilkhe aleobola khangukho waalya inyama inga ebaasa ali iya Nambuya. Imbuka yabilatio ifiti ili. Wanesilikhe warakikha, khila. Watsya wakona muyembe asi. Lga nio alikonale eliho watitukha,bibindu inga kametsi byammustukhakho. Illi wimyelesa wabona biibi byonmundu nalundi inga bili khuwunya buubi. Namono inda yamushukho warakikha khunyalala. Byakwa khu wanesilikhe.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,9 +197,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassen gjør jeg mitt beste i alle måter.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/12.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/12.jpg" /></p>
+<p>Wanasilkhe wakalala khu nina khuyembe wabors Mulongo numuksi ni babaana. Wanesilikhe wisuunda ni busungu. Angina wanesilikhe! Kha imbiitse.” Nihabweneho wanesilikhe wakhakadeho waniina khuyembe en inga anyala ta. Mulongo wambasako khangu wayiiya khamakhesi khumuwomela Wanesilikhe. Walomera wanesilikhe “Sinakhubela syangu khuniina siinga wiboha kumukosi mumilo wamala watumbira iffi khwakhu yetta khukhukweesa uniine.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/12.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>11</strong>
 </center>
@@ -207,9 +207,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>Jeg gjør alle disse gode tingene hver dag. Men det jeg liker mest, er å leke og leke!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/13.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0165/13.jpg" /></p>
+<p>Wanesilikhe watimaka muntsu wakhobola ni kumukosi kusilo, wakwiibowa mumiro nio wakhutsukutsila Mulongo. Mulongo nimukhasi nababaana behee babusa kamaani kabwe boosi khukwesa inga baborora kumukosi khusakya tsekuyumbe. Kumukosi kwiyongera uhumukoka Wanesilikhe watamba huheela waafa. Mulongo numukhasi ni babaana barula khukuyembe . baatsya beliilisa hango ni bibindu bya Wanesilikhe.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0165_mulongo-ni-wanasilikhe/mp3/13.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>12</strong>
 </center>
@@ -217,12 +217,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="zama-er-flink-1">Zama er flink!</h2>
-<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="mulongo-ni-wanasilikhe-1">Mulongo ni wanasilikhe</h2>
+<strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Natalie Propa<br> <strong>Translation:</strong> <br> <strong>Language:</strong> Lumasaaba<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/mulongo-and-ogre-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
