--- a/audio/asp/myx/0294_kamarofu-ka-kuukhu_audio-slides.html
+++ b/audio/asp/myx/0294_kamarofu-ka-kuukhu_audio-slides.html
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="zama-er-flink" class="slide level1">
-<h1>Zama er flink!</h1>
+<section id="kamarofu-ka-kuukhu" class="slide level1">
+<h1>Kamarofu ka Kuukhu</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Lillebroren min sover veldig sent. Jeg våkner tidlig, fordi jeg er flink!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>Inimilo ya Kuukhu yaba yiyaangisa, abe yaayitsulamo kamaheemba, buulo, ni mwooko. Ne shishafuurira ilala buulayi mu byoosi yaba kamatoore. Abe yakhaba nga Kuukhu aaba ni babetsukhulu baakali, ne mu shimoonyo busa naamanya ndi ise niye isi aafuura khuukana. Niye aanaangatsaka mu ntsu yeewe busheele, waamboolelakho bimoonyo bye mukari. Ne aaramisayo shimoonyo shitweela sheesi aakhamboolelakho ta: eena isi arobesela kamarofu.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>Shifukhu shitweela, nabona kumuyayi, nga baakureere mu muumu ibulafu khu ntsu ya Kuukhu. Nga namureeba sheesi kumuyayi kukhola, niye aantsilamo busa ari, “Kuli kumuyayi kwase namakaanga.” Andulo e kumuyayi, aabawo kamaru mafwiiti kari, keesi Kuukhu ekhala ayuusayuusa. Bubwayaayi bwamaamba naamureeba ndi, “Kuukhu, kamaru kano kaashi?”Niye aantsilamo busa ari, “Kali kamaru kaase namakaanga.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Du er min morgenstjerne&quot;, sier mamma.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>Ise shaantsikhoyesa naabi khuubona Kuukhu, kamarofu, kamaru ni kumuyayi. Ne Kuukhu ndi wandumana wa maayi wase. Nase naamuloma ndi, “Kuukhu ndekhe imbone nga n’uuli khuukhola...” Kila Kuukhuwe amwiilamo ari, “Mwaanawe, ukhaba umumiinyi ta, khola nga niindi khuukhulomela.”Indyo naatsya butima.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>Jeg vasker meg selv, jeg vil ikke ha hjelp.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>Nga ni nakobola, nanyoola Kuukhu nga wekhaale khu lwaanyi ne nga mbaawo kumuyayi, namwe kamarofu ta. Nase naamureeba ndi, “Kuukhu, kumuyayi kuli waheena, kamarofu koosi kali waheena, naluundi waheena...?” Ne sheesi Kuukhu aantsilamo shonyene ari, “Bili mu shifwo shase namakaanga.” Shaakhalasa naabi.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>Jeg kan takle kaldt vann og blå stinkende såpe.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>Lwanyuma lwe bifukhu bibili, Kuukhu aanduma khuutsya khumureerera kumusyeendo kweewe, khukhwaama mu shiseenge sheewe. Khaangu nga indikuule lulwiitsi, luulukhu lwe kamarofu lwaantsakaanila. Mu shiseenge she mukari nimwo mweesi Kuukhu aaba waabisile kumuyayi namakaanga kumuboofu, waakubiimbilila buulayi busa ni ibulangiti ikhale. Ise naabera ibulangiti naawunyila luulukhu lulukhongelesa.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma påminner, “Glem ikke tennene.” Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>Likono lya Kuukhu lyanendekulusa, nga alaanga ari, “Uli khuukhola shiina? Yuubakho undeerere kumusyeendo.” Nase naarura khaangu ni kumusyeendo. Kuukhu wandeeba ari, “Uli khuumuunamuunila shiina?” Shireebo sheewe shaakila nakhebulila nga naba indi khuumuunamuuna khulwe khufuumbula shiifwo sha Kuukhu sha namakaanga.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Etter kroppsvasken hilser jeg på bestefar og tante og ønsker dem en god dag.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>Shifukhu shisheelakho, nga Kuukhu eetsa khuukyeniyila maayi wase, naatimaka mu ntsu yeewe khuuyama khu marofu luundi. Yabamwo litoore lye kamarofu kakanuunukhiile ilala. Naasasulakho litweela naalibisa mu shitweeya shaase. Lwanyuma lwe khuubiimba khu muyayi luundi, naatsya inyuma we ntsu naalilyaka khaangu. Lirofu ilyo nilyo lilyafuurisakho khun’gaaha khukhwaama nga ye ndyaatsaka khu marofu.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Så kler jeg meg selv, &quot;Jeg er stor nå mamma,” sier jeg.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>Shifukhu shishaloondakho nga Kuukhu ali mu nimilo ibuumbi aaha tsinyanyi, namolokha neepa mu ntsu nekheenga khu marofu. Aambi koosi kaaba kaarobile. Nga sinyala nekhaliilikha khuuyila shisasi she tsimuunga tsine ta. Ne ni naba nga isoota khuutsya imulyaango, naawulila kuukhu akhololela ibulafu. Naanyalisa busa khuubisa kamarofu mu shitweeya shase, naakeenda naamubirakho.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +177,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>Jeg kan kneppe knapper og spenne skoene mine.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>Shifukhu ndi shisheelakho shaba she likaantso. Kuukhu eenyukha tikhinyi. Busheele aayilatsaka kamarofu ni mwooko khuukulisa mwikaantso. Sinatimilakho khuumukyenilakho khu shifukhu isho ta. Ne nga abe siinyala khuumutatayila imbuka ndeeyi ta.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +187,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>Og jeg sørger for at lillebror kjenner alle skolenyhetene.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>Lwanyumakho angoloobe khu shifukhu sheene isho, nga maayi, ni paapa banaanga. Ise namanya lwashiina. Shiilo isho, nga ingona, namanya ndi sindiilakho luundi khukhwiiba ta, khukhwaama khu kuukhu, khukhwaama khu basaali baase, ni khufuurira ilala khukhwaama khu muundu yeesi.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/myx/0294_kamarofu-ka-kuukhu/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,32 +197,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassen gjør jeg mitt beste i alle måter.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/12.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>Jeg gjør alle disse gode tingene hver dag. Men det jeg liker mest, er å leke og leke!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/13.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="zama-er-flink-1">Zama er flink!</h2>
-<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="kamarofu-ka-kuukhu-1">Kamarofu ka Kuukhu</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Cornelius Wekunya<br> <strong>Language:</strong> Lumasaaba<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
