--- a/audio/no/0001_en-veldig-høy-mann_audio-slides.html
+++ b/audio/no/0001_en-veldig-høy-mann_audio-slides.html
@@ -92,20 +92,14 @@
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 </center>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/01.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/01.mp3" type="audio/mpeg">
-  </audio>
-
+  
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 <p>Hakka hans var for kort.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/02.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/02.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -115,11 +109,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 <p>Døråpningen hans var for lav.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/03.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/03.mp3" type="audio/mpeg">
-  </audio>
-
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -129,10 +119,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 <p>Senga hans var for kort.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/04.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/04.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -141,11 +128,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>Sykkelen hans var for kort.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/05.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/05.mp3" type="audio/mpeg">
-  </audio>
+<p>Sykkelen hans var for lav.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -155,10 +139,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
 <p>Denne mannen var for høy!</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/06.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/06.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -168,10 +149,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 <p>Han lagde et veldig langt hakkeskaft.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/07.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/07.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -181,10 +159,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 <p>Han lagde en veldig høy dørramme.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/08.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/08.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -194,10 +169,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
 <p>Han lagde en veldig lang seng.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/09.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/09.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -207,10 +179,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
 <p>Han kjøpte en veldig høy sykkel.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/10.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/10.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -220,10 +189,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 <p>Han satt på en veldig høy stol. Han spiste med en veldig lang gaffel.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/11.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/11.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -233,10 +199,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 <p>Han forlot huset sitt og bodde i en stor skog. Han levde i mange år.</p>
-  <audio>
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/ogg/12.ogg" type="audio/ogg">
-    <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001/mp3/12.mp3" type="audio/mpeg">
-  </audio>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0001_en-veldig-høy-mann/mp3/12.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>11</strong>
 </center>
@@ -255,7 +218,7 @@ You can view the original story on the ASP website <a href='http://africanstoryb
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
