--- a/audio/no/0067_å-lage-mat_audio-slides.html
+++ b/audio/no/0067_å-lage-mat_audio-slides.html
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="akatabo-kobudde" class="slide level1">
-<h1>Akatabo k'obudde</h1>
+<section id="å-lage-mat" class="slide level1">
+<h1>Å lage mat</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Obudde bwa mukalwe.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
+<p>Jeg skreller potetene.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Omusana gwaka nnyo.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
+<p>Jeg kutter en kål.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Obudde bwa kibuyaga.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
+<p>Jeg river gulerøttene.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Obudde bwa kidde.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
+<p>Jeg vasker bønnene.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Obudde bunnyogovu.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
+<p>Jeg kutter opp squashen.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Enkuba etonnya.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
+<p>Jeg hakker spinaten.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>Eggulu libwatuka.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
+<p>Mammaen min hakker løken.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ndaba Musoke.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0231/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
+<p>Hakka løk får meg til å gråte.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0067_å-lage-mat/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,12 +177,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="akatabo-kobudde-1">Akatabo k'obudde</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Mwesigwa Joshua Waswa<br> <strong>Language:</strong> Luganda<br>
+<h2 id="å-lage-mat-1">Å lage mat</h2>
+<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjoner:</strong> Kathy Arbuckle<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/cooking'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
