--- a/audio/asp/lg/0066_nakku-nenviiri-essatu_audio-slides.html
+++ b/audio/asp/lg/0066_nakku-nenviiri-essatu_audio-slides.html
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="zama-er-flink" class="slide level1">
-<h1>Zama er flink!</h1>
+<section id="nakku-nenviiri-essatu" class="slide level1">
+<h1>Nakku n'enviiri essatu</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Lillebroren min sover veldig sent. Jeg våkner tidlig, fordi jeg er flink!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>Edda ennyo, abawala basatu baagenda okutyaba enku.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>Akasana kaali kaaka nyo so ne bagenda ku mugga okuwuga. Baazanya nga bwe beesammuliza amazzi era nga bwe bawuga.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Du er min morgenstjerne&quot;, sier mamma.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>Tebaalwa ne balaba ng'obudde bubayiseeko. Baayanguwa mangu okuddayo mu eka.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>Jeg vasker meg selv, jeg vil ikke ha hjelp.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>Baba banaatera okutuuka eka, Nakku n'akwata mu bulago bwe era n'akizuula nti yali yeerabbidde omukuufu gwe! Ky'ava asaba banne nti, &quot;Bambi munnyambe tuddeyo ffena!&quot; Naye mikwano gye ne bamuddamu nti obudde bwali buyise nnyo.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>Jeg kan takle kaldt vann og blå stinkende såpe.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>Kati Nakku n'addayo ku mugga yekka. Omukuufu yagufuna era n'ayanguwa okuddayo eka. Wabula bambi ekkubo lyamubula olw'enzikiza.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma påminner, “Glem ikke tennene.” Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>Bwe yatunula mu maaso gy'alaga n'alaba ekitangaala mu kasiisira. Yayanguwa okukatukako era n'akonkona ku luggi.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Etter kroppsvasken hilser jeg på bestefar og tante og ønsker dem en god dag.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>Ekyamwewuunyisa kwe kulaba nga Wambwa y'aggulawo oluggi era n'amubuuza nti, &quot;Oygala ki?&quot; Ko Nakku nti, &quot;Mbuze era njagala kufuna w'akusula!&quot; Wambwa n'amuddamu nti, &quot;Yingira awatali ekyo nja kukuluma!&quot; Nakku n'ayingira mu nda.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Så kler jeg meg selv, &quot;Jeg er stor nå mamma,” sier jeg.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>Wambwa n'amugamba nti, &quot;Nfumbira.&quot; Nakku n'addamu nti, &quot;Sifumbiranga ku Wambwa.&quot; Ko Wambwa nti, &quot;Fumba, awatali ekyo nja kukuluma.&quot; Bw'atyo Nakku n'afumbira Wambwa emmere.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +177,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>Jeg kan kneppe knapper og spenne skoene mine.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>Ekyo bwe kyaggwa, Wambwa n'amugamba nti, &quot;Njalira obuliri.&quot; Nakku n'addamu nti, &quot;Saalanga ku buliri bwa Wambwa.&quot; Ko Wambwa, &quot;Yala obuliri, awatali ekyo nja kukuluma.&quot; Bw'atyo Nakku n'ayala obuliri.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +187,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>Og jeg sørger for at lillebror kjenner alle skolenyhetene.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>Buli lunaku yalina okufumba, okwera n'okwoleza Wambwa. Lwali lumu Wambwa n'amugamba nti, &quot;Nakku, olwaleero ηηenda kukyalira ku mikwano gyange. Yere ennyumba, fumba emmere, era oyoze n'ebintu byange nga sinnadda.&quot;</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,9 +197,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassen gjør jeg mitt beste i alle måter.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/12.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>Amangu ddala nga Wambwa angenze, Nakku n'afuna enviiri ssatu okuva ku mutwe gwe. Oluviiri olumu yaluteeka wansi w'ekitanda, olulala n'aluteeka emabega w'oluggi, n'olulala n'aluteeka mu kiraalo. Oluvannyuma n'adduka emisinde miyitirivu okutuuka ewaka.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/12.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>11</strong>
 </center>
@@ -207,9 +207,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>Jeg gjør alle disse gode tingene hver dag. Men det jeg liker mest, er å leke og leke!</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/13.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>Wambwa bwe yakomawo, n'anoonya Nakku. N'atandika okuyita nti, &quot;Nakku, Nnaku, oli ludda wa?&quot; Oluviiri olwasooka ne lwanukula nti, &quot;Ndi wano wansi w'ekitanda.&quot; Olw'okubir ne lugamba nti, &quot;Ndi mabega wano emabega w'oluggi.&quot; N'oluviiri olw'okusatu ne lugamba nti, &quot;Ndi wano mu kiraalo.&quot;</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/13.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>12</strong>
 </center>
@@ -217,12 +217,22 @@
 </section>
 <section class="slide level1">
 
-<h2 id="zama-er-flink-1">Zama er flink!</h2>
-<strong>Tekst:</strong> Michael Oguttu<br> <strong>Illustrasjoner:</strong> Vusi Malindi<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>Awo Wambwa n'ategeera nti Nakku yali amusalidde amagezi. Kye yava nno adduka nnyo nnyo okutuuka ku kyalo kya Nakku. Naye bannyina Nakku baali bagiteeze awo n'emiggo eminene. Wambwa yakyuka n'addayo era okuva olwo taddangamu kulabikako.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/lg/0066_nakku-nenviiri-essatu/mp3/14.mp3" type="audio/mpeg"> </audio>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="nakku-nenviiri-essatu-1">Nakku n'enviiri essatu</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Rev Joseph M Katabaro<br> <strong>Language:</strong> Luganda<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
